Using official jira rest api lib (not working) Not working, due to https://ecosystem.atlassian.net/browse/JRJC-149

--- a/src/main/resources/credentials-example.properties
+++ b/src/main/resources/credentials-example.properties
@@ -1,3 +1,5 @@
 # copy this file to credentials.properties and fill out the values
-stormcredentials.user=username
-stormcredentials.password=password
+storm.user=username
+storm.password=password
+jira.user=username
+jira.password=password
