--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /src/main/webapp/assets/styles/main.css
 /src/main/webapp/dist
 /src/main/resources/credentials.properties
+/src/main/webapp/scripts/app/app.constants.js
 
 ######################
 # Node
