--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,5 +1,5 @@
 #H2 Server Properties
-#Tue Mar 22 19:36:49 CET 2016
+#Wed Mar 30 13:54:35 CEST 2016
 0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/stira|stira
 webAllowOthers=true
 webPort=8082
