--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stira",
   "version": "0.0.0",
-  "description": "Description for stira",
+  "description": "Storm + Jira",
   "private": true,
   "cacheDirectories": [
     "node_modules",
@@ -30,7 +30,7 @@
     "gulp-ng-constant-fork": "0.4.1",
     "gulp-notify": "2.2.0",
     "gulp-plumber": "1.0.1",
-    "gulp-protractor": "1.0.0",
+    "gulp-protractor": "2.0.0",
     "gulp-rev": "6.0.1",
     "gulp-sass": "2.1.0",
     "gulp-sourcemaps": "^1.6.0",
@@ -53,8 +53,8 @@
     "map-stream": "0.0.6",
     "npm": "^3.8.0",
     "phantomjs": "1.9.18",
-    "protractor": "^2.5.1",
-    "protractor-jasmine2-screenshot-reporter": "0.1.7",
+    "protractor": "^3.2.1",
+    "protractor-jasmine2-screenshot-reporter": "0.3.0",
     "proxy-middleware": "0.15.0",
     "requirejs": "2.1",
     "run-sequence": "1.1.5",
